# RustCLA

./: .gitignore
ABIChecker/: .gitignore  Cargo.toml  README.md  _build.rs  build.rs
ABIChecker/collector/: Cargo.toml
ABIChecker/collector/_collect_cxx/src/: lib.rs  main.rs
ABIChecker/collector/collect_cxx/: .gitignore  Cargo.toml  libcollect_cxx.rlib
ABIChecker/collector/collect_cxx/bindgen/: Cargo.toml  clang.rs  lib.rs  regex_set.rs
ABIChecker/collector/collect_cxx/bindgen/ir/: context.rs  enum_ty.rs  helpers.rs  int.rs  layout.rs  objc.rs  traversal.rs  var.rs
ABIChecker/collector/collect_cxx/bindgen/ir/analysis/: mod.rs  sizedness.rs
ABIChecker/collector/collect_cxx/bindgen/options/: mod.rs
ABIChecker/collector/collect_cxx/src/: lib.rs  main.rs  resolver.rs  types.rs
ABIChecker/collector/collect_cxx/src/types/: function.rs  mod.rs  structure.rs  typedef.rs
ABIChecker/collector/collect_cxx/tests/: struct.cc
ABIChecker/collector/collect_rust/: .gitignore  Cargo.toml  config.toml
ABIChecker/collector/collect_rust/cbindgen/src/: lib.rs
ABIChecker/collector/collect_rust/src/: lib.rs  main.rs  resolver.rs  types.rs
ABIChecker/collector/collect_rust/src/types/: function.rs  mod.rs  structure.rs  typedef.rs
ABIChecker/collector/collect_rust/tests/: struct.rs
ABIChecker/collector/src/: lib.rs
ABIChecker/collector/src/resolve/: cxx.rs  mod.rs  rust.rs
ABIChecker/collector/src/types/: mod.rs  structure.rs
ABIChecker/modified_deps/bindgen/: features.rs  parse.rs
ABIChecker/modified_deps/bindgen/ir/: annotations.rs  comp.rs  context.rs  item.rs  mod.rs  struct_layout.rs
ABIChecker/modified_deps/bindgen/ir/analysis/: derive.rs
ABIChecker/modified_deps/cbindgen/: Cargo.toml
ABIChecker/modified_deps/cbindgen/src/bindgen/: library.rs
ABIChecker/src/: _main.rs  _target.rs  analysis.rs  analysis_types.rs  lib.rs  main.rs  target.rs  utils.rs
ABIChecker/src/analysis/: _analysis_types.rs  analysis_funcs.rs  analysis_ir.rs  analysis_structs.rs  analysis_types.rs  mod.rs
ABIChecker/src/analysis/analysis_types/: function.rs  ir_info.rs  mod.rs  result.rs  structure.rs
ABIChecker/src/collect/: _collect_cxx.rs  collect_cxx.rs  collect_ir.rs  collect_rust.rs  ctypes  helper.rs  ir_types.rs  mod.rs  rtypes
ABIChecker/tests/: cpp.cc  rust.rs  temp.txt
ABIChecker/tests/correcttest/alignunmatch/: analysis_cpp.cc  cpp.cc  rust.rs
ABIChecker/tests/correcttest/funcunmatch1/: cpp.cc  rust.rs
ABIChecker/tests/correcttest/funcunmatch2/: analysis_cpp.cc  cpp.cc  rust.rs
ABIChecker/tests/correcttest/sizeunmatch/: rust.rs
ABIChecker/tests/correcttest/typeunmatch/: analysis_cpp.cc
ABIChecker/tests/funcunmatch1/: cpp.cc
ABIChecker/tests/fwstest/rs/: Cargo.toml  build.rs
ABIChecker/tests/fwstest/rs/src/: c_function.cpp  utils.rs
ABIChecker/tests/i1/: .gitignore  Cargo.toml  bindings.rs  cpp.hpp  global_static.ll  hello.ll  issue1s  rust.rs
ABIChecker/tests/i1/src/: lib.rs  main.rs
ABIChecker/tests/i2/include/: hello.hpp
ABIChecker/tests/rcpp_bindgen/: Cargo.toml  bindings.rs  build.rs
ABIChecker/tests/rcpp_bindgen/include/: hello.hpp
ABIChecker/tests/rcpp_bindgen/src/: hello.cpp  main.rs
ABIChecker/tests/simpletest/: Cargo.toml  build.rs  cf_debug.txt  rf_debug.txt
ABIChecker/tests/simpletest/src/: bindings.rs  c_function.c  c_function.cpp  main.rs  utils.rs
ABIChecker/tests/sizeunmatch/: cpp.cc
ABIChecker/tests/sizeunmatch1/: cpp.cc
ABIChecker/tests/sizeunmatch2/: rust.rs
ABIChecker/tests/sizeunmatch3/: cpp.cc  rust.rs
ABIChecker/tests/speed/: rust.rs
ABIChecker/tests/speedtest/: cpp.cc  math.cc  math.rs  rust.rs  stdio.cc  stdio.rs  stdlib.cc  stdlib.rs  string.cc  string.rs  time.cc  time.rs
ABIChecker/tests/test1/: cpp.cc  rust.rs
ABIChecker/tests/test2/: cpp.cc  rust.rs
ABIChecker/tests/typeunmatch/: cpp.cc  rust.rs
ABIChecker/tests/wstest/: Cargo.toml  hello.ll  rs.ll  sys.ll
ABIChecker/tests/wstest/rs/: Cargo.toml
ABIChecker/tests/wstest/rs/src/: lib.rs
ABIChecker/tests/wstest/sys/: Cargo.toml
ABIChecker/tests/wstest/sys/csrc/: bindings.rs
ExampleStage/Rust_C/: hello.c  hello.s  main.rs
ExampleStage/Rust_Go/: hello.go  main.rs  makefile
ExampleStage/Rust_Java/: Cargo.toml
ExampleStage/Rust_Python/: Cargo.toml
ExampleStage/Rust_asm/: main.rs  makefile
Issues/i1/: build.rs
Issues/i2/: Cargo.toml  build.rs
OldABIChecker/: Cargo.toml  Dockerfile  README.md
OldABIChecker/collector/: .gitignore
OldABIChecker/collector/_collect_cxx/: Cargo.toml
OldABIChecker/collector/_collect_cxx/src/types/: mod.rs  structure.rs  typedef.rs
OldABIChecker/collector/_collect_cxx/tests/: typedef.cc
OldABIChecker/src/: lib.rs  target.rs
Pipeline/: README.md
Pipeline/crate_downloader/: .gitignore  Cargo.toml
Pipeline/crate_downloader/src/: main.rs  utils.rs
Pipeline/rust_ffi/: Cargo.toml
Pipeline/rust_ffi/src/: main.rs  utils.rs
Pipeline/scripts/: analysis.sql  (+2 more)
(+66 files in other folders)
