[package]
name = "abi_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collect_rust = { path = "collector/collect_rust" }
inkwell = { version = "0.1.0", features = ["llvm15-0"] }
ansi_term = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
lazy_static = "1.4.0"
log = "0.4.17"
