[package]
name = "abichecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
lazy_static = "1.5.0"

clap = { version = "4.5.20", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm14-0"]}

[profile.dev]
panic = "unwind"
