[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen_cxx_parser = { path = "../modified_deps/bindgen" }
cbindgen_rust_parser = { path = "../modified_deps/cbindgen" }
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"