[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam = "0.8.2"
log = "0.4.20"
once_cell = "1.18.0"
postgres = "0.19.7"
regex = "1.10.0"
simplelog = "0.12.1"
