[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
log = "0.4.20"
postgres = "0.19.7"
simplelog = "0.12.1"
abi_checker = { path = "../../ABIChecker" }

[profile.dev]
panic = "unwind"
