[package]
description = "Modified `bindgen` to collect basic info for c/cpp."
license = "BSD-3-Clause"
name = "bindgen_cxx_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "bindgen_cxx_parser"
path = "lib.rs"

[dependencies]
bitflags = "1.0.3"
cexpr = "0.6"
clang-sys = { version = "1", features = ["clang_6_0"] }
lazycell = "1"
lazy_static = "1"
peeking_take_while = "0.1.2"
quote = { version = "1", default-features = false }
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"]}
regex = { version = "1.5", default-features = false , features = ["std", "unicode"] }
which = { version = "4.2.1", optional = true, default-features = false }
prettyplease = { version = "0.2.0" }
annotate-snippets = { version = "0.9.1", features = ["color"], optional = true }
shlex = "1"
rustc-hash = "1.0.1"
proc-macro2 = { version = "1", default-features = false }
log = { version = "0.4", optional = true }