[package]
name = "collect_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbindgen_rust_parser = { path = "../../modified_deps/cbindgen" }
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
pretty_env_logger = "0.4.0"

[features]
my_crate = []
default = ["my_crate"]